--- a/0.html
+++ b/0.html
@@ -45,7 +45,8 @@ var wordlist = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturda
 
     var answerArray = [];
     for (var i=0; i < word.length; i++) {
-        answerArray.push("*");
+        answerArray.push("_");
+
     }
     console.log(answerArray.length)
 
@@ -88,7 +89,7 @@ var wordlist = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturda
     }
 
 
-    console.log(answerArray.join("_"));
+    console.log(answerArray.join(" "));
 }
 
 
